[tool.poetry]
name = "loggpy"
version = "0.1.0"
description = "A powerful Python logging library with custom levels and colored output support"
authors = ["ReiDoBrega <pedro94782079@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReiDoBrega/loggpy"
homepage = "https://github.com/ReiDoBrega/loggpy"
keywords = ["logging", "logger", "colored-logs", "custom-logging", "terminal", "debug", "development-tools"]

[tool.poetry.dependencies]
python = ">=3.7"
coloredlogs = ">=15.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^1.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"